update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Glen-s-Creek_70191
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70191-h/images/cover.jpg
 creator:
   author:
     agent_name: Holmes, Mary Jane
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1239
     wikipedia: https://en.wikipedia.org/wiki/Mary_Jane_Holmes
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70191#Glen-s-Creek
 gutenberg_issued: '2023-03-03'
 identifiers:
   gutenberg: '70191'
